redmine/mariadb-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-master
  labels:
    name: mariadb-master
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    name: mariadb-master
