redmine/redmine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    name: redmine
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    name: redmine
