redmine/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
  labels: 
    app: redmine
spec:
  rules:
  - host: redmine.youben.demo
    http:
      paths:
      - backend:
          serviceName: redmine
          servicePort: 80
